# weather-check

./: .gitignore  Makefile  docker-compose.dev.yaml
backend/: Dockerfile.dev  pyproject.toml  requirements.txt
backend/src/apps/logs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/logs/migrations/: 0001_initial.py
backend/src/config/: settings.py  urls.py
backend/src/config/settings/: __init__.py  common.py  database.py  drf.py  spectacular.py
